--- a/css/styles.css
+++ b/css/styles.css
@@ -71,6 +71,7 @@ header {
     padding: 0 15px;
     align-items: center;
     justify-content: center;
+    margin: 0;
 }
 .header-nav {
     display: flex;
