--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ img {
 }
 .container {
     max-width: 1440px;
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
 }
 /* HEADER */
@@ -68,7 +68,7 @@ header {
     padding: 0 15px;
     align-items: center;
     justify-content: center;
-    margin: 0;
+    margin: 0 auto;
 }
 .header-nav {
     display: flex;
