--- a/css/styles.css
+++ b/css/styles.css
@@ -62,7 +62,7 @@ img {
 header {
     border-bottom: 1px solid #e7e9fc;
 }
-.header-container {
+.container .header-container {
     display: flex;
     width: 1158px;
     padding: 0 15px;
