--- a/css/styles.css
+++ b/css/styles.css
@@ -62,9 +62,9 @@ img {
 header {
     border-bottom: 1px solid #e7e9fc;
 }
-.container .header-container {
+.header-container {
     display: flex;
-    width: 1158px;
+    max-width: 1158px;
     padding: 0 15px;
     align-items: center;
     justify-content: center;
