--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
+*,
+*::before,
+*::after{
+    box-sizing: border-box;
+}
 body {
     font-family: "Roboto", sans-serif;
     color:#434455;
@@ -31,7 +36,6 @@ h3 {
     font-size: 20px;
     line-height: 1.2;
     letter-spacing: 0.02em;
-    text-align: center;
     color: #2e2f42;
 }
 a {
@@ -51,7 +55,7 @@ img {
 header{
     border-bottom: 1px solid #e7e9fc;
 }
-head:first-child {
+head th:nth-child(1) {
     display: flex;
     width: 1158px;
     margin: 0 auto;
@@ -166,8 +170,18 @@ button:focus {
 }
 /* foundations of business */
 .visually-hidden {
-    visibility: hidden;
-}
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+  }
 .main-section-two {
     padding: 120px 0;
 }
@@ -178,8 +192,8 @@ button:focus {
 .main-section-two-titlename {
     margin-bottom: 8px;
 }
-.main-section-two-list-page {
-    width: calc((100% - 72px)/4);
+.main-section-two-list-page { 
+    width: calc((100% - 72px) / 4);
 }
 .main-section-two-titlename {
     margin-bottom: 8px;
@@ -206,8 +220,6 @@ button:focus {
 .main-section-three-list {
     background-color: #FFFFFF;
     width: calc((100% - 72px)/4);
-}
-.main-section-three-list :first-child {
     border-radius: 0 0 4px 4px;
 }
 .main-section-three-workers {
@@ -232,22 +244,24 @@ button:focus {
 .main-section-four-title {
     margin-bottom: 72px;
 }
-.main-section-four-title {
+.main-section-four-pages-title {
     display: flex;
     flex-wrap: wrap;
     column-gap: 24px;
     row-gap: 48px;
 }
 .main-section-four-list {
-    width: calc((100% - 48px)/3);
+    width: calc((100% - 48px) / 3);
 }
 .main-section-four-list-category {
-    padding: 32px 26px;
+    padding: 32px 16px;
     border: 1px solid #e7e9fc;
     border-top: 8px;
 }
 .main-section-four-titlename {
     margin-bottom: 8px;
+
+
 }
 .main-section-four-text {
     font-weight: 400;
