--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,8 @@ a {
 }
 img {
     display: block;
+    max-width: 100%;
+    object-fit:cover;
 }
 .container { 
     max-width: 1440px;
@@ -55,7 +57,7 @@ img {
 header{
     border-bottom: 1px solid #e7e9fc;
 }
-head th:nth-child(1) {
+.header-container {
     display: flex;
     width: 1158px;
     margin: 0 auto;
