--- a/css/styles.css
+++ b/css/styles.css
@@ -50,6 +50,10 @@ lu {
     padding-left: 0; 
     margin: 0;
 }
+li {
+    padding-left: 0; 
+    margin: 0;
+}
 .container { 
     max-width: 1440px;
     padding-left: 0;
