--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,11 @@ body {
 ul {
     list-style-type: none;
     padding-left: 0; 
-    
+    margin: 0;    
+}
+
+p {
+    margin: 0;
 }
 h1 {
     font-family: "Roboto", sans-serif;
@@ -22,6 +26,7 @@ h1 {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
+    margin: 0;
 }
 h2 {
     font-family: "Roboto", sans-serif;
@@ -32,6 +37,7 @@ h2 {
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
+    margin: 0;
 }
 h3 {
     font-family: "Roboto", sans-serif;
@@ -40,9 +46,11 @@ h3 {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
+    margin: 0;
 }
 a {
     text-decoration: none;
+    margin: 0;
 }
 img {
     display: block;
@@ -54,12 +62,9 @@ li {
     margin: 0;
 }
 .container { 
-    max-width: 1440px;
-    padding-left: 0;
-    padding-right: 0;
-    margin-left: 156px;
-    margin-right: 156px;
-    justify-content: center;
+    max-width: 1158px;
+    padding-left: 0 15px;
+    margin: 0 auto;
     }
 /* HEADER */
 header{
@@ -67,11 +72,8 @@ header{
 }
 .header .container {
     display: flex;
-    width: 1158px;
-    margin: 0 auto;
-    padding: 0 15px;
     justify-content: space-between;
-    
+    align-items: center;
 
 }
 /*HEADERNAV*/
@@ -107,6 +109,7 @@ header{
     
 }
 .header-nav-page {
+    display: block;
     color: #2e2f42;
     padding: 24px 0;
 }
@@ -268,7 +271,7 @@ button:focus {
     border-top: 8px;
 }
 .main-section-four-titlename {
-    margin-bottom: 8px;
+    padding-bottom: 8px;
 
 
 }
