--- a/css/styles.css
+++ b/css/styles.css
@@ -10,14 +10,16 @@ body {
     
 }
 ul {
-    list-style-type: none;
+    list-style: none;
     padding-left: 0; 
-    margin: 0;    
+    margin: 0 auto;    
 }
-
-p {
+h1, h2, h3, h4, h5, h6, p { 
     margin: 0;
-}
+
+} 
+
+
 h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -26,7 +28,7 @@ h1 {
     letter-spacing: 0.02em;
     text-align: center;
     color: #fff;
-    margin: 0;
+    
 }
 h2 {
     font-family: "Roboto", sans-serif;
@@ -37,7 +39,7 @@ h2 {
     text-align: center;
     color: #2e2f42;
     text-transform: capitalize;
-    margin: 0;
+    
 }
 h3 {
     font-family: "Roboto", sans-serif;
@@ -46,7 +48,7 @@ h3 {
     line-height: 1.2;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    margin: 0;
+
 }
 a {
     text-decoration: none;
@@ -54,13 +56,8 @@ a {
 }
 img {
     display: block;
-    max-width: 100%;
-    object-fit:cover;
 }
-li {
-    padding-left: 0; 
-    margin: 0;
-}
+
 .container { 
     max-width: 1158px;
     padding-left: 0 15px;
