--- a/css/styles.css
+++ b/css/styles.css
@@ -60,7 +60,7 @@ img {
 
 .container { 
     max-width: 1158px;
-    padding-left: 0 15px;
+    padding: 0 15px;
     margin: 0 auto;
     }
 /* HEADER */
